--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -95,4 +95,7 @@ h2{
     margin-top: 0;
     
 }
+/* .k-icon, .k-tool-icon, .k-grouping-dropclue, .k-drop-hint, .k-column-menu .k-sprite {
+background-image: url("../img/brand/ac.png")
+} */
 
