--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="HeaderController" style="margin-left: 10px;">
+<div class="container" ng-controller="HeaderController" style="margin-left: 10px;width:100%;">
   <div class="navbar-header">
     <button class="navbar-toggle" type="button" ng-click="toggleCollapsibleMenu()">
       <span class="sr-only">Toggle navigation</span>
@@ -6,7 +6,8 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a ui-sref="home" class="navbar-brand" style="color: green">GUDUCHI</a>
+    <!-- <a ui-sref="home" class="navbar-brand" style="color: green">GUDUCHI</a> -->
+    <img ng-src="modules/core/client/img/brand/guduchi_logo.png" width="50px" height="50px"/>
     
   </div>
  <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
