--- a/modules/users/client/views/authentication/dashboard.client.view.html
+++ b/modules/users/client/views/authentication/dashboard.client.view.html
@@ -6,18 +6,18 @@
 
 <div class="carousel" data-flickity='{ "autoPlay": true }' style="height: 450px;marginBottom:100px;">
         <div class="carousel-cell">                        <!-- <img data-flickity-lazyload="https://cdn.pixabay.com/photo/2015/12/01/20/28/road-1072823_960_720.jpg" /> -->
-        <img ng-src="https://www.garuda-indonesia.com/images/discover/destination/top-20-destination/archive-list-banner/top-destination-bangkok.jpg" width="100%" >             
+        <img ng-src="https://wallpapermemory.com/uploads/426/bangkok-wallpaper-1080p-477996.jpg" width="100%" >             
        </div>
       
         <div class="carousel-cell">
-        <img ng-src="https://cdn.pixabay.com/photo/2016/11/08/04/51/bangkok-1807480_960_720.jpg" width="100%" />
+        <img ng-src="https://c1.staticflickr.com/7/6139/6190407714_76f6c2cd7b_b.jpg" width="100%" />
         </div>
         
         <div class="carousel-cell">
-        <img ng-src="https://cdn.pixabay.com/photo/2017/11/23/07/46/babe-2972219__340.jpg" width="100%" >
+        <img ng-src="https://images.pexels.com/photos/296941/pexels-photo-296941.jpeg" width="100%" >
         </div>
         <div class="carousel-cell">
-        <img ng-src="https://cdn.pixabay.com/photo/2015/07/15/11/53/woodtype-846088__340.jpg" width="100%" >
+        <img ng-src="https://images.pexels.com/photos/1438832/pexels-photo-1438832.jpeg" width="100%" >
         </div>
 </div>
 <!-- <md-divider md-inset:true></md-divider> -->
